<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="0dp"
        android:background="#28394b"
        android:id="@+id/toolbar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/localez"
                android:textColor="#e1cda0"
                android:textSize="30sp"
                android:textStyle="bold">

            </TextView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/sp_rectangle2_root"
                android:text="@string/logout"
                android:textAllCaps="false"
                android:textColor="#e1cda0"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/category"
        android:layout_width="397dp"
        android:layout_height="50dp"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="0dp"
        android:layout_marginStart="7dp"
        android:backgroundTint="@color/white"
        app:tabIndicatorColor="#28394b"
        app:tabIndicatorHeight="4dp"
        app:tabMode="scrollable"
        app:tabSelectedTextColor="#28394b"
        app:tabTextColor="#876445">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/populer">

        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Health"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kesehatan">

        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/olahraga">

        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem

            android:id="@+id/Business"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bisnis">

        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem

            android:id="@+id/Technology"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teknologi">

        </com.google.android.material.tabs.TabItem>


    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/contain"
        android:layout_width="match_parent"
        android:layout_height="636dp"
        android:layout_below="@id/category"
        android:layout_marginTop="20dp" />

</RelativeLayout>